kibana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    meta.helm.sh/release-name: kibana
    meta.helm.sh/release-namespace: logging
  creationTimestamp: "2026-02-14T14:06:08Z"
  generation: 2
  labels:
    app: kibana
    app.kubernetes.io/managed-by: Helm
    heritage: Helm
    release: kibana
  name: kibana-kibana
  namespace: logging
  resourceVersion: "2769284"
  uid: 2057afee-d1dc-4523-bf55-711268f28902
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kibana
      release: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-02-14T20:05:19+05:30"
      creationTimestamp: null
      labels:
        app: kibana
        release: kibana
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: ELASTICSEARCH_HOSTS
          value: https://elasticsearch-master:9200
        - name: ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES
          value: /usr/share/kibana/config/certs/ca.crt
        - name: SERVER_HOST
          value: 0.0.0.0
        - name: ELASTICSEARCH_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: elasticsearch-master-credentials
        - name: ELASTICSEARCH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: elasticsearch-master-credentials
        - name: NODE_OPTIONS
          value: --max-old-space-size=1800
        image: docker.elastic.co/kibana/kibana:8.5.1
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - |
              [...]
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/kibana/config/certs
          name: elasticsearch-certs
          readOnly: true
        - mountPath: /usr/share/kibana/config/tokens
          name: kibana-tokens
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: kibana-tokens
      - name: elasticsearch-certs
        secret:
          defaultMode: 420
          secretName: elasticsearch-master-certs
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-14T14:36:10Z"
    lastUpdateTime: "2026-02-14T14:36:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-02-14T14:06:09Z"
    lastUpdateTime: "2026-02-14T14:36:10Z"
    message: ReplicaSet "kibana-kibana-54dd5d6c44" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
