elasticsearch-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-external
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Support large log batches
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    # Recommended: IP Whitelisting (See Security Section below)
spec:
  rules:
  - host: elasticsearch.monitoring.opsmx.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
